src/app/components/modules/Header.scss
.Header {
  position: fixed;
  backface-visibility: hidden;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 100;
  background-color: $white;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.05);
  @include themify($themes) {
    background-color: themed('navBackgroundColor');  
    border-bottom: themed('border');  
  }   
  h3 {
    padding-left: 1rem;
    margin-bottom: 0;
  }
  .menu {
    // background-color: $white;
    padding-left: 0;
    .hamburger {
      @include hamburger();
      position: relative;
      top: 2px;
      &::after {
        transition: 0.2s all ease-in-out;
        @include themify($themes) {
          background: themed('textColorPrimary');  
          box-shadow: 0 7px 0 themed('textColorPrimary'), 0 14px 0 themed('textColorPrimary');  
        } 
      }
      &:hover {
        &::after {
          @include themify($themes) {
            background: themed('textColorAccent');  
            box-shadow: 0 7px 0 themed('textColorAccent'), 0 14px 0 themed('textColorAccent');  
          } 
        }        
      }         
    }
  }
  ul.menu > li.toggle-menu > a {
    padding-right: 0;
  }
  .menu-icon {
    margin: 0.2rem 0;
  }
  svg > path {
    @include themify($themes) {
      fill: themed('textColorPrimary');  
    } 
  }
  li.submit-story > a {
    @extend .e-btn;
    margin-right: 22px;
    margin-left: 16px;
  }
  a {
    @extend .link;
    @extend .link--primary;
    font-family: helvetica, sans-serif;
  }
}

.Header__top {
  // background-color: $white;
  
  padding: 0.25rem 0;
  transition: all 0.3s ease-out;
  @media print, screen and (min-width: 52.5em) {
    padding: 0.75rem 0;
  }
  ul > li.Header__top-logo {
    padding: .35rem 0 .35rem 0;
  }
  ul > li.delim {
    color: $medium-gray;
  }
  ul > li > a {
    font-size: 1.1rem;
  }
  ul > li > span {
    font-size: 1.1rem;
    line-height: 1.5rem;
    padding: 0.7rem 1rem;
    display: flex;
    text-transform: lowercase;
  }
  @media screen and (max-width: 39.9375em) {
      .shrink {
          padding: 0 1rem;
      }
  }

  .input-group {
    margin-bottom: 0;
    margin-left: -1.2rem;
  }

  .input-group-button {
    padding-left: .4rem;
  }

  input[type='text'] {
    min-width: 7rem;
    max-width: 15rem;
    text-align: left;
    border-radius: 3px;
    border: 1px solid transparent;
    box-shadow: none;
    border-radius: 0;
    padding-left: 24px;
    transition: 0.3s ease-in;
    position: relative;
    left: -1.5em;
    font-family: helvetica, sans-serif;
    font-size: 16px;
    background: transparent;
    @media only screen and (min-width: 61.875em) {
      &:hover, &:focus {
        box-shadow: 2px 2px 0 0 $color-teal;
      }
    }
    @include themify($themes) {
        color: themed('textColorPrimary');  
        caret-color: themed('textColorAccent');  
    }    
  }
}

ul > li.Header__top-logo > a {
  padding: 0;
  transition: none;
}

.Header {
  ul > li > .button {
    padding-top: 0.2rem;
    padding-bottom: 0.2rem;
  }
}


.Header__sub-nav {
  position: relative;
  padding: 0;
  background-color: $white;
  border-bottom: 1px solid $light-gray;
  transition: margin .3s;
  z-index: -1;
  will-change: margin;
  li {
    line-height: 1rem;
    padding: 1.2rem 0 1.2rem 0;
    margin: 0 0 0 2rem;
    }
  // No margin adjustments for first child element in menu items
  li:first-child {
    margin: 0 0 0 0;
  }
  li > a {
    color: $dark-gray;
    background-color: $white;
    border-bottom: 1px solid transparent;
    font-size: 1rem;
    line-height: 0;
    padding: 0;
  }
  a.active {
    color: $black;
    //border-bottom: 1px solid $dark-gray;
  }
}


.Header__sub-nav.hidden {
  // display: none;
  margin-top: -42px;
}


.Header__topic {
  background-color: $white;
  line-height: 1.5rem;
  padding: 0.7rem 1rem;
  text-transform: uppercase;
}

.Header__top-steemit {
  margin-right: -22px;
  .beta {
    position: absolute;
    top: 43px;
    left: 140px;
    font-size: 0.7rem;
    @include opacity(0);
    display: none;
    @include themify($themes) {
      color: themed('textColorSecondary');
    }
    @include MQ(L) {
      display: block;
    }
  }
}

.Header__sort-order-menu {
  .VerticalMenu {
    left: 0;
  }
  .Icon.dropdown-arrow {
    position: relative;
    top: 3px;
  }
  .Icon.dropdown-arrow polygon {
    @include themify($themes) {
      fill: themed('textColorPrimary');
    }
  }
}

.logo {
  padding-top: 10px!important;
  padding-bottom: 1px!important;
  padding-right: 5px!important;
}

.ConnectionError {
  margin-right: 4rem;
  color: #ec5840;
}

.logo-new {
  transition: 0.2s ease-in-out;
  display: none;
  transition: 0.2s all ease-in-out;
  &--mobile {
    display: block;
    width: 30px;
    height: 30px;
    @media only screen and (min-width: 400px) {
      display: none;
    }
  }
  &--desktop {
    display: none;
    width: 120px;
    height: auto;
    @media only screen and (min-width: 400px) {
      display: block;
    }     
    @include MQ(M) {
      width: 144px;
      height: auto;
    }    
  }
  
  .icon-svg {
    fill: $color-teal;
    @include themify($themes) {
      fill: themed('colorAccent');
    }
  }
}

.Header__top-logo:hover {
  .logo-new {
    .icon-svg {
      fill: $color-blue-black;
      @include themify($themes) {
        fill: themed('colorAccentReverse');
      }
    }
  }
}

.Header__top-logo a {
  &:visited, &:active {
    .logo-new {
      .icon-svg {      
        @include themify($themes) {
            fill: themed('ColorAccent');  
        }
      }
    } 
  }        
}

